<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:id="@+id/stepText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/dialog_art_help_step_1" />

        <ImageView
            android:id="@+id/stepImage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dalvik_to_art_step_1"
            android:contentDescription="@string/content_description_preference_change_runtime" />

        <TextView
            android:id="@+id/stepText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/dialog_art_help_step_2" />

        <ImageView
            android:id="@+id/stepImage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dalvik_to_art_step_2"
            android:contentDescription="@string/content_description_dialog_choose_dalvik_art" />

        <TextView
            android:id="@+id/stepText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/dialog_art_help_step_3" />

        <ImageView
            android:id="@+id/stepImage3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dalvik_to_art_step_3"
            android:contentDescription="@string/content_description_dialog_confirm_dalvik_art" />

        <TextView
            android:id="@+id/stepText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/dialog_art_help_step_4" />
    </LinearLayout>

</ScrollView>